--- a/config.json
+++ b/config.json
@@ -1,49 +1,76 @@
 {
+    "TAU": 0.001,
+    "LR_CRITIC": 0.0001,
+    "LR_ACTOR": 0.0001,
+    "GAMMA": 0.99,
+    
+    "BUFFER_SIZE": 400000,
+    "BATCH_SIZE": 256,
+    "WEIGHT_DECAY": 0,
+    "noise": {
+        "sigma": 0.1,
+        "mu": 0.0,
+        "theta": 0.15
+    },
+    
+    "SEED": {
+        "environment": 10,
+        "agent": 42    
+    },
     "model": {
         "actor": [
             {
-                "type": "normalizeBatch"
+                "type": "Linear",
+                "size": 8,
+                "activation": "RELU"
+            },
+            {
+                "type": "batchnormalization"
             },
             {
                 "type": "Linear",
-                "size": 256
+                "size": 64,
+                "activation": "RELU"
+            },
+             {
+                "type": "Linear",
+                "size": 64,
+                "activation": "RELU"
+            },
+            {
+                "type": "Linear",
+                "size": 4                
             }
         ],
         "critic": [
             {
                 "type": "Linear",
                 "size": 8,
-                "activation": "relu"
+                "activation": "RELU"
             },
             {
-                "type": "normalizeBatch"
+                "type": "batchnormalization"
             },
             {
                 "type": "Linear",
-                "size": 256
-                "activation": "relu"
+                "size": 64,
+                "activation": "RELU"
+            },
+             {
+                "type": "Linear",
+                "size": 64,
+                "activation": "RELU"
             },
             {
                 "type": "dropout",
-                "rate": 0.2
-            },
+                "probability": 0.2
+            },            
             {
                 "type": "Linear",
-                "size": 2
+                "size": 1                
             }
+            
         ]
-    },
-    "agent": {
-        "seed": 10,
-        "gamma": 0.99,
-        "buffer_size": 100000,
-        "batch_size": 64,
-        "tau": 0.001,
-        "LR_actor": 0.0001,
-        "LR_critic": 0.0001
-        "noise": {
-            "seed": 10,
-            "sigma": 0.1
-        }
     }
+    
 }
