--- a/config.json
+++ b/config.json
@@ -1,76 +1,26 @@
 {
     "TAU": 0.001,
-    "LR_CRITIC": 0.0001,
-    "LR_ACTOR": 0.0001,
+    "LR_CRITIC": 0.01,
+    "LR_ACTOR": 0.01,
     "GAMMA": 0.99,
     
     "BUFFER_SIZE": 400000,
     "BATCH_SIZE": 512,
-    "WEIGHT_DECAY": 0,
+    "WEIGHT_DECAY": 0.0001,
     "noise": {
-        "sigma": 0.02,
+        "sigma": 0.2,
         "mu": 0.0,
-        "theta": 0.15
+        "theta": 0.15,
+        "scale": 0.1
     },
+    "noise_factor": 2,
+    "noise_decay": 0.9999,
     
-    "SEED": {
-        "environment": 10,
+    "seed": {
+        "environment": 42,
         "agent": 42    
     },
-    "model": {
-        "actor": [
-            {
-                "type": "Linear",
-                "size": 8,
-                "activation": "RELU"
-            },
-            {
-                "type": "batchnormalization"
-            },
-            {
-                "type": "Linear",
-                "size": 64,
-                "activation": "RELU"
-            },
-             {
-                "type": "Linear",
-                "size": 64,
-                "activation": "RELU"
-            },
-            {
-                "type": "Linear",
-                "size": 4                
-            }
-        ],
-        "critic": [
-            {
-                "type": "Linear",
-                "size": 8,
-                "activation": "RELU"
-            },
-            {
-                "type": "batchnormalization"
-            },
-            {
-                "type": "Linear",
-                "size": 64,
-                "activation": "RELU"
-            },
-             {
-                "type": "Linear",
-                "size": 64,
-                "activation": "RELU"
-            },
-            {
-                "type": "dropout",
-                "probability": 0.2
-            },            
-            {
-                "type": "Linear",
-                "size": 1                
-            }
-            
-        ]
-    }
-    
+    "network": {
+        "hidden": 512
+    }    
 }
